# 4TeamBackend

./: Dockerfile  README.md  build.sh  category_basic.json  pyproject.toml
.github/workflows/: django.yml
accessinfo/: add_post_example.json  admin.py  apps.py  models.py  new_post_example.json  serializers.py  tests.py  urls.py  views.py
accessinfo/migrations/: 0001_initial.py  0002_alter_accessinfo_group.py
auth_sms/: admin.py  apps.py  models.py  urls.py  views.py
auth_sms/migrations/: 0001_initial.py  0002_alter_auth_sms_options_alter_auth_sms_auth_number_and_more.py  (+1 more)
categories/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
chats/: admin.py  models.py  serializers.py  urls.py  views.py
chattings/: 11.json  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
comments/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
config/: settings.py  urls.py
feeds/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
groups/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
letterlist/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
letterlists/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
letters/: admin.py  models.py  serializers.py  urls.py  views.py
likes/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
medias/: admin.py  models.py  serializers.py  urls.py  views.py
recomments/: admin.py  models.py  serializers.py  urls.py  views.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
(+77 files in other folders)
