[tool.poetry]
name = "curb-backend"
version = "0.1.0"
description = ""
authors = ["goeasyonng <meoa1026@gmail.com>"]
readme = "README.md"
packages = [{include = "curb_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
django-environ = "^0.10.0"
djangorestframework = "^3.14.0"
django-rest-swagger = "^2.2.0"
drf-yasg = "^1.21.5"
djangorestframework-simplejwt = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
